<resources>
    <string name="app_name">OrderManagement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">LOGIN</string>
    <string name="account">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">SUBMIT</string>
    <string name="room">ROOM</string>
    <string name="slogan">Luxury food, luxury restaurant!</string>
    <string name="table">TABLE</string>
    <string name="types_of_food">TYPES OF FOOD</string>
    <string name="status">Status: %s</string>
    <string name="money">Price: %sđ</string>
    <string name="logout">Logout</string>
    <string name="hi">Hi, %s</string>
    <string name="home">Home</string>
    <string name="room_reservation">ROOM RESERVATION</string>
    <string name="ticket_reservation">TICKET RESERVATION</string>
    <string name="idpd_s">IDPD: %s</string>
    <string name="room_s">Room: %s</string>
    <string name="table_s">Table: %s</string>
    <string name="customer_name_s">Customer name: %s</string>
    <string name="name_s">Name: %s</string>
    <string name="phone_s">Phone: %s</string>
    <string name="note">Note</string>
    <string name="notes">Note: %s</string>
    <string name="order_food">ORDER FOOD</string>
    <string name="amount">Amount</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="order">ORDER</string>
    <string name="detail">DETAIL</string>
    <string name="order_detail">ORDER DETAIL</string>
    <string name="amount_s">Amount: %s</string>
    <string name="change">CHANGE</string>
    <string name="update">UPDATE</string>
    <string name="message">MESSAGE</string>
    <string name="logout_question">Do you want to log out?</string>
    <string name="delete_order_detail_question">Do you want to delete order detail?</string>
    <string name="ok">OK</string>
    <string name="doing">DOING</string>
    <string name="done">DONE</string>
    <string name="change_the_status_of_switch_to_out_of_stock">Change the status of food to Out stock</string>
    <string name="edit_status_food">Edit status food</string>
    <string name="change_status">Change\nStatus</string>
    <string name="slots_s">Slots: %s</string>
</resources>