<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_dialog"
    android:layout_marginStart="100dp"
    android:layout_marginEnd="100dp">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvQuestionLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_order_detail_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm_DE"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_login"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuestionLogout"
        app:layout_constraintEnd_toStartOf="@id/btnCancel_DE"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel_DE"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:background="@drawable/btn_cancel"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btnConfirm_DE"
        app:layout_constraintTop_toBottomOf="@id/tvQuestionLogout"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>