<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".ui.LoginFragment">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tvTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="80sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo" />

            <LinearLayout
                android:id="@+id/llBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvTittle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textSize="45sp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/txtAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:Text="NV01"
                    android:textSize="60sp"
                    android:textColor="@color/black"
                    android:autofillHints=""
                    android:inputType="text"
                    tools:ignore="LabelFor,RtlSymmetry"
                    android:background="@drawable/txt_login"
                    android:layout_marginTop="10dp"
                    android:paddingStart="20dp"
                    android:text="NV02" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="45sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:Text="NV01"
                    android:textSize="60sp"
                    android:textColor="@color/black"
                    android:autofillHints=""
                    android:inputType="textPassword"
                    tools:ignore="LabelFor,RtlSymmetry"
                    android:paddingStart="20dp"
                    android:background="@drawable/txt_login"
                    android:layout_marginTop="10dp"
                    android:text="02042000" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/llBody"
                android:layout_marginTop="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/submit"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:background="@drawable/btn_login"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/tvForgotPW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textSize="30sp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>