<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.dialog.DialogOrderFoodFragment"
        android:layout_margin="10dp"
        android:background="@drawable/background_dialog">

        <TextView
            android:id="@+id/tvTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_food"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" />

        <ImageView
            android:id="@+id/ivHinhAnh_Dialog"
            android:layout_width="220dp"
            android:layout_height="190dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTittle"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitXY"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tvTenMon_Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="BEEFSTEAK"
            android:textSize="40sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/ivHinhAnh_Dialog"
            app:layout_constraintTop_toBottomOf="@+id/tvTittle"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/tvGia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTenMon_Dialog"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginEnd="32dp" />

        <TextView
            android:id="@+id/tvTittleNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tvTenMon_Dialog"
            app:layout_constraintTop_toBottomOf="@id/tvTenMon_Dialog"
            android:layout_marginTop="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNote"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:background="@drawable/txt_dialog"
            app:layout_constraintStart_toEndOf="@id/tvTittleSL"
            app:layout_constraintTop_toTopOf="@id/tvTittleNote"
            android:layout_marginStart="20dp"
            android:paddingStart="20dp" />

        <TextView
            android:id="@+id/tvTittleSL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tvTittleNote"
            app:layout_constraintTop_toBottomOf="@id/tvTittleNote"
            android:layout_marginTop="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSL"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:background="@drawable/txt_dialog"
            app:layout_constraintStart_toEndOf="@id/tvTittleSL"
            app:layout_constraintTop_toTopOf="@id/tvTittleSL"
            android:layout_marginStart="20dp"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="end" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_login"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivHinhAnh_Dialog"
            app:layout_constraintEnd_toStartOf="@id/btnCancel"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_cancel"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@id/btnConfirm"
            app:layout_constraintTop_toBottomOf="@id/ivHinhAnh_Dialog"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>